--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,10 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     padding: 0;
     margin: 0;
+    height: 100%;
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
@@ -31,7 +32,7 @@ body {
     padding-bottom: 30px;
 }
 
-h1{
+h1, #footer_h1{
     margin-right: auto;
     color: white;
     padding: 0px 160px;
@@ -48,6 +49,7 @@ a {
     align-items: flex-start;
     padding-top: 50px;
     padding: 30px;
+    flex: 1;
   }
 
   .card_link {
@@ -107,4 +109,59 @@ h4{
 
 .column2 {
     padding-left: 5px;
+}
+
+/* footer */
+.footer {
+  background-color: rgb(43, 62, 99);
+  display: flex;
+  gap: 5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer_left, .footer_right {
+  display: flex;
+  gap: 2rem;
+  font-size: 12px;
+}
+
+.before_footer{
+  background-color: rgb(114, 157, 244, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+#wMGlogo {
+  width: 400px;
+  height: 200px;
+  margin-left: auto;
+  position: absolute;
+  z-index: -1;
+  opacity: 0.1;
+  padding-top: 10px;
+}
+
+#before_footer_text {
+  font-size: 12px;
+  text-align: center;
+  padding: 10px 200px;
+}
+#before_footer_copyright {
+  text-align: center;
+  padding: 10px 300px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-top: 0;
+}
+
+#footer_h1{
+  margin: 10px;
+  font-size: 20px;
+}
+
+.all_footers {
+  flex: 1,0,auto;
+  align-self: flex-end;
 }
