--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+/* General */
 * {
     box-sizing: border-box;
 }
@@ -16,7 +17,10 @@ html, body {
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
+    scroll-behavior: smooth;
 }
+
+/* Header */
 
 nav {
   display: flex;
@@ -60,8 +64,6 @@ a:focus::after {
   transform: scale(1);
 }
 
-
-
 .header {
   display: flex;
   justify-content: center;
@@ -72,9 +74,10 @@ a:focus::after {
   flex-shrink: 0;
 }
 
-.hero_image{
-  padding-bottom: 30px;
-  flex: 1;
+/* Scrolling for internal links */
+
+:target {
+  scroll-margin-top: 3rem;
 }
 
 /* Slideshow */
@@ -108,7 +111,7 @@ a:focus::after {
 
 .image_text {
   color: #f2f2f2;
-  font-family: 'Playfair Display', serif;;
+  font-family: 'Playfair Display', serif;
   font-size: 25px;
   padding: 8px 12 px;
   position: absolute;
@@ -144,7 +147,7 @@ a:focus::after {
   to {opacity: 1;}
 }
 
-/*  */
+/* Content Side */
 
 h1, #footer_h1{
   margin-right: auto;
@@ -173,10 +176,76 @@ a {
     justify-content: center;
   }
 
+/* Editor's Choice */
+
+.editorsChoice {
+  background-image: url(/Sem_2/Praktikum/Prak2/Praktikum_News_Site/repos/News_Site/images/eCbackground.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 5px;
+  margin: 40px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 50px;
+  row-gap: 30px;
+  position: relative;
+  padding-bottom: 20px;
+  padding-right: 30px;
+}
+
+.editorsChoice::after {
+  content: '';
+  border-radius: 5px;
+  background-color: rgb(43, 62, 99, 0.5);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.editorsChoice h1 {
+  padding-left: 2em;
+  padding-top: 0.5em;
+  color: #f2f2f2;
+  font-family: 'Playfair Display', serif;
+  grid-column: 1 / 5;
+  z-index: 1;
+  margin-bottom: 0;
+}
+
+.editorsChoice h1::after {
+  content: '';
+  background-color: #f2f2f2;
+  position: absolute;
+  width: 50%;
+  height: 5px;
+  top: 57px;
+  left: 360px;
+  border-radius: 50px;
+}
+
+.editorsChoice img {
+  margin-left: 30px;
+  z-index: 1;
+  width: 240px;
+  height: 135px;
+}
+
+.editorsChoice h4 {
+  margin-top: 0;
+  text-align: center;
+  max-width: 275px;
+  padding-left: 40px;
+  color: #f2f2f2;
+  z-index: 1;
+}
+
+/* Video and Animation around it */
   video {
     margin: 20px;
     margin-top: 0;
     flex: 1;
+    border-radius: 10px;
   }
 
 #aroundTheVideo {
@@ -204,6 +273,7 @@ a {
   100% {background-color: rgb(92, 92, 204); left: -380px; top: 0px; width: 10px; height: 10px;}
 }
 
+/* card styles */
   .card_link {
     color: rgb(113, 124, 174);
   }
