--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,6 @@
 /* General */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Bebas+Neue&family=Merriweather:wght@700&family=Lora:wght@700&family=Oswald:wght@700&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -31,6 +33,7 @@ nav {
   padding: 0px 100px;
   flex-shrink: 0;
   font-size: 16px;
+  height: 5rem;
 }
 
 a{
@@ -65,13 +68,24 @@ a:focus::after {
 }
 
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 3rem;
   background-color: rgb(114, 157, 244);
   padding: 0px 150px;
-  flex-shrink: 0;
+  width: 100%;
+  z-index: 5;
+  transition: 0.3s ease-in-out;
+
+}
+
+.scroll {
+  transform: translateY(-6rem);
+  transition: 0.3s ease-in-out;
 }
 
 /* Scrolling for internal links */
@@ -106,8 +120,6 @@ a:focus::after {
   top: 69%;
   translate: -50% -50%;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Bebas+Neue&family=Merriweather:wght@700&family=Lora:wght@700&family=Oswald:wght@700&display=swap');
 
 .image_text {
   color: #f2f2f2;
@@ -162,6 +174,7 @@ a {
 }
 
 .content {
+  margin-top: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
